# jupyter-session-tracer

./: .eslintrc.js  .gitignore  .prettierrc  DEVELOPMENT_GUIDE.md  LICENSE  MANIFEST.in  Makefile  README.md  environment.yml  install.json  package.json  pyproject.toml  setup.py  tsconfig.json
jupyter_session_tracer/: __init__.py
jupyter_session_tracer/labextension/: package.json
jupyter_session_tracer/labextension/static/: 181.cd6c8c5ccfa952559d42.js  920.03f398ac025b300b224d.js  920.e208e47ad9178f541e4c.js  remoteEntry.12361b575349363dbfe1.js  remoteEntry.333724ae00d50d0981c9.js  style.js
scripts/: build-wheel.sh  build.sh  develop.sh  install-local.sh
src/: index.ts  sessionPopup.ts  sessionTracer.ts
style/: index.css
